Changes to STM32F10x Standard Peripheral Library
------------------------------------------------

$Id$

1. Imported STM32F10x Standard Peripheral Library V3.5.0.