@@ -25,6 +25,7 @@
 
 /* Includes ------------------------------------------------------------------*/
 /* Uncomment/Comment the line below to enable/disable peripheral header file inclusion */
+#include <assert.h>
 #include "stm32f10x_adc.h"
 #include "stm32f10x_bkp.h"
 #include "stm32f10x_can.h"
@@ -60,14 +61,12 @@
 
 /**
   * @brief  The assert_param macro is used for function's parameters check.
-  * @param  expr: If expr is false, it calls assert_failed function which reports 
+  * @param  expr: If expr is false, it calls assert function which reports 
   *         the name of the source file and the source line number of the call 
   *         that failed. If expr is true, it returns no value.
   * @retval None
   */
-  #define assert_param(expr) ((expr) ? (void)0 : assert_failed((uint8_t *)__FILE__, __LINE__))
-/* Exported functions ------------------------------------------------------- */
-  void assert(uint8_t* file, uint32_t line);
+  #define assert_param(expr) assert(expr)
 #else
   #define assert_param(expr) ((void)0)
 #endif /* USE_FULL_ASSERT */
